// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status should render a flyout when clicking the link 1`] = `
<EuiFlyout
  aria-labelledby="flyoutTitle"
  onClose={[Function]}
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      size="m"
    >
      <h2>
        Monitoring alerts
      </h2>
    </EuiTitle>
    <EuiText>
      <p>
        Configure an email server and email address to receive alerts.
      </p>
    </EuiText>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <AlertsConfiguration
      emailAddress="test@elastic.co"
      onDone={[Function]}
    />
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Status should render a success message if all alerts have been migrated and in setup mode 1`] = `
<EuiCallOut
  color="success"
  iconType="flag"
  title="Kibana alerting is up to date!"
>
  <p>
    <EuiLink
      onClick={[Function]}
    >
      Want to make changes? Click here.
    </EuiLink>
  </p>
</EuiCallOut>
`;

exports[`Status should render without setup mode 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    title="Hey! We made alerting better!"
  >
    <p>
      <EuiLink
        onClick={[Function]}
      >
        Migrate cluster alerts to our new alerting platform.
      </EuiLink>
    </p>
  </EuiCallOut>
  <EuiSpacer />
</Fragment>
`;
